@@ -720,17 +720,12 @@
 	"exif-exposureprogram-2": "Normal programme",
 	"exif-exposureprogram-5": "Creative programme (biased toward depth of field)",
 	"exif-exposureprogram-6": "Action programme (biased toward fast shutter speed)",
-	"exif-subjectdistance-value": "$1 metres",
 	"exif-meteringmode-2": "Centre weighted average",
 	"exif-sensingmethod-2": "One-chip colour area sensor",
 	"exif-sensingmethod-3": "Two-chip colour area sensor",
 	"exif-sensingmethod-4": "Three-chip colour area sensor",
 	"exif-sensingmethod-5": "Colour sequential area sensor",
 	"exif-sensingmethod-8": "Colour sequential linear sensor",
-	"exif-gpsaltitude-above-sealevel": "$1 {{PLURAL:$1|metre|metres}} above sea level",
-	"exif-gpsaltitude-below-sealevel": "$1 {{PLURAL:$1|metre|metres}} below sea level",
-	"exif-gpsspeed-k": "Kilometres per hour",
-	"exif-gpsdestdistance-k": "Kilometres",
 	"exif-ycbcrpositioning-1": "Centred",
 	"exif-iimcategory-lab": "Labour",
 	"namespacesall": "all",
