@@ -1,0 +1,10 @@
+{
+	"@metadata": {
+		"authors": []
+	},
+	"exif-subjectdistance-value": "$1 meters",
+	"exif-gpsaltitude-above-sealevel": "$1 {{PLURAL:$1|meter|meters}} above sea level",
+	"exif-gpsaltitude-below-sealevel": "$1 {{PLURAL:$1|meter|meters}} below sea level",
+	"exif-gpsspeed-k": "Kilometers per hour",
+	"exif-gpsdestdistance-k": "Kilometers"
+}
