@@ -3461,7 +3461,7 @@
 	"exif-exposureprogram-6": "Action program (biased toward fast shutter speed)",
 	"exif-exposureprogram-7": "Portrait mode (for closeup photos with the background out of focus)",
 	"exif-exposureprogram-8": "Landscape mode (for landscape photos with the background in focus)",
-	"exif-subjectdistance-value": "$1 meters",
+	"exif-subjectdistance-value": "$1 metres",
 	"exif-meteringmode-0": "Unknown",
 	"exif-meteringmode-1": "Average",
 	"exif-meteringmode-2": "Center weighted average",
@@ -3544,16 +3544,16 @@
 	"exif-gpslatitude-s": "South latitude",
 	"exif-gpslongitude-e": "East longitude",
 	"exif-gpslongitude-w": "West longitude",
-	"exif-gpsaltitude-above-sealevel": "$1 {{PLURAL:$1|meter|meters}} above sea level",
-	"exif-gpsaltitude-below-sealevel": "$1 {{PLURAL:$1|meter|meters}} below sea level",
+	"exif-gpsaltitude-above-sealevel": "$1 {{PLURAL:$1|metre|metres}} above sea level",
+	"exif-gpsaltitude-below-sealevel": "$1 {{PLURAL:$1|metre|metres}} below sea level",
 	"exif-gpsstatus-a": "Measurement in progress",
 	"exif-gpsstatus-v": "Measurement interoperability",
 	"exif-gpsmeasuremode-2": "2-dimensional measurement",
 	"exif-gpsmeasuremode-3": "3-dimensional measurement",
-	"exif-gpsspeed-k": "Kilometers per hour",
+	"exif-gpsspeed-k": "Kilometres per hour",
 	"exif-gpsspeed-m": "Miles per hour",
 	"exif-gpsspeed-n": "Knots",
-	"exif-gpsdestdistance-k": "Kilometers",
+	"exif-gpsdestdistance-k": "Kilometres",
 	"exif-gpsdestdistance-m": "Miles",
 	"exif-gpsdestdistance-n": "Nautical miles",
 	"exif-gpsdop-excellent": "Excellent ($1)",
